ACBrFramework/jACBrFramework/ACBrFramework_JNI/include/ACBrAAC.h

#define ACBr

typedef void* INTPTR;

typedef char* PCHAR;

typedef char BOOL;
#define DllImport extern "C"
#define DllImport extern


// Tipos de dados

typedef BOOL (*AntesArquivoCallback) (void);


typedef PCHAR (*CryptCallback) (PCHAR value);


typedef void (*NoArgumentsCallback) (void);


typedef PCHAR (*OnGetChaveCallback) (void);


typedef struct
{
	char NOME_ARQUIVO[51];
	char MD5[33];
} TECFArquivo;


typedef struct
{
	double ValorGT;
	char NumeroSerie[30];
	int CRO;
	int CNI;
	double DtHrAtualizado;
} TECFAutorizado;


typedef void (*VerificarRecomporNumSerieCallback) (PCHAR NumSerie,double ValorGT,int *CRO,int *CNI);


typedef double (*VerificarRecomporValorGTCallback) (PCHAR NumSerie);

DllImport int AAC_Create(INTPTR* aacHandle);

DllImport int AAC_Destroy(INTPTR* aacHandle);

DllImport int AAC_GetArqLOG(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_GetCriarBAK(const INTPTR aacHandle);

DllImport int AAC_GetEfetuarFlush(const INTPTR aacHandle);

DllImport int AAC_GetGravarConfigApp(const INTPTR aacHandle);

DllImport int AAC_GetGravarDadosPAF(const INTPTR aacHandle);

DllImport int AAC_GetGravarDadosSH(const INTPTR aacHandle);

DllImport int AAC_GetGravarTodosECFs(const INTPTR aacHandle);

DllImport int AAC_GetNomeArquivoAux(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_GetUltimoErro(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_Empresa_GetCep(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_Empresa_GetCidade(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_Empresa_GetCNPJ(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_Empresa_GetContato(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_Empresa_GetEmail(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_Empresa_GetEndereco(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_Empresa_GetIE(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_Empresa_GetIM(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_Empresa_GetRazaoSocial(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_Empresa_GetTelefone(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_Empresa_GetUf(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_Empresa_SetCep(const INTPTR aacHandle, const PCHAR cep);

DllImport int AAC_IdentPaf_Empresa_SetCidade(const INTPTR aacHandle, const PCHAR cidade);

DllImport int AAC_IdentPaf_Empresa_SetCNPJ(const INTPTR aacHandle, const PCHAR cnpj);

DllImport int AAC_IdentPaf_Empresa_SetContato(const INTPTR aacHandle, const PCHAR contato);

DllImport int AAC_IdentPaf_Empresa_SetEmail(const INTPTR aacHandle, const PCHAR email);

DllImport int AAC_IdentPaf_Empresa_SetEndereco(const INTPTR aacHandle, const PCHAR endereco);

DllImport int AAC_IdentPaf_Empresa_SetIE(const INTPTR aacHandle, const PCHAR ie);

DllImport int AAC_IdentPaf_Empresa_SetIM(const INTPTR aacHandle, const PCHAR im);

DllImport int AAC_IdentPaf_Empresa_SetRazaoSocial(const INTPTR aacHandle, const PCHAR razaoSocial);

DllImport int AAC_IdentPaf_Empresa_SetTelefone(const INTPTR aacHandle, const PCHAR telefone);

DllImport int AAC_IdentPaf_Empresa_SetUf(const INTPTR aacHandle, const PCHAR uf);

DllImport int AAC_IdentPaf_GetNumeroLaudo(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_GetVersaoER(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_Paf_GetBancoDados(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_Paf_GetLinguagem(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_Paf_GetNome(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_Paf_GetSistemaOperacional(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_Paf_GetVersao(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_Paf_PrincipalExe_GetMD5(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_Paf_PrincipalExe_GetNome(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_Paf_PrincipalExe_SetMD5(const INTPTR aacHandle, const PCHAR md5Exe);

DllImport int AAC_IdentPaf_Paf_PrincipalExe_SetNome(const INTPTR aacHandle, const PCHAR exePrincipal);

DllImport int AAC_IdentPaf_Paf_SetBancoDados(const INTPTR aacHandle, const PCHAR banco);

DllImport int AAC_IdentPaf_Paf_SetLinguagem(const INTPTR aacHandle, const PCHAR linguagem);

DllImport int AAC_IdentPaf_Paf_SetNome(const INTPTR aacHandle, const PCHAR nome);

DllImport int AAC_IdentPaf_Paf_SetSistemaOperacional(const INTPTR aacHandle, const PCHAR sistema);

DllImport int AAC_IdentPaf_Paf_SetVersao(const INTPTR aacHandle, const PCHAR versao);

DllImport int AAC_IdentPaf_SetNumeroLaudo(const INTPTR aacHandle, const PCHAR razaoSocial);

DllImport int AAC_IdentPaf_SetVersaoER(const INTPTR aacHandle, const PCHAR razaoSocial);

DllImport int AAC_SetArqLOG(const INTPTR aacHandle, const PCHAR arqLog);

DllImport int AAC_SetCriarBAK(const INTPTR aacHandle, const BOOL value);

DllImport int AAC_SetEfetuarFlush(const INTPTR aacHandle, const BOOL value);

DllImport int AAC_SetGravarConfigApp(const INTPTR aacHandle, const BOOL value);

DllImport int AAC_SetGravarDadosPAF(const INTPTR aacHandle, const BOOL value);

DllImport int AAC_SetGravarDadosSH(const INTPTR aacHandle, const BOOL value);

DllImport int AAC_SetGravarTodosECFs(const INTPTR aacHandle, const BOOL value);

DllImport int AAC_SetNomeArquivoAux(const INTPTR aacHandle, const PCHAR caminho);